Fixed footer and breadcurmb wrapping issues on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,7 +99,7 @@ html {
 html {
 	color: $color-text;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	font-size: $font-size;
+	font-size: 16px;
 	line-height: $line-height;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
@@ -123,6 +123,12 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 1.5rem 1.5rem 2.5rem 1.5rem;
+}
+
+@media screen and (min-width: 28rem) {
+	html {
+		font-size: $font-size;
+	}
 }
 
 @media screen and (min-width: 44rem) {
@@ -272,6 +278,7 @@ img {
 
 .c-nav__list {
 	display: flex;
+	flex-wrap: wrap;
 	font-size: 0.75rem;
 }
 
@@ -292,6 +299,13 @@ img {
 }
 
 .c-breadcrumbs__item {
+	&:last-child {
+		display: inline-block;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
 	&:not(:last-child) {
 		&:after {
 			content: "/";
